embed google font Rubik and fix minor margin alignment

--- a/index.css
+++ b/index.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Rubik';
 }
 
 body {
@@ -104,7 +105,8 @@ body {
   margin-bottom: 35px;
   color: rgba(106, 106, 106, 0.353);
   width: 40%;
-  font-size: 34px;
+  font-size: 40px;
+  font-weight: 800;
 }
 
 .cloud-text .content {
@@ -187,7 +189,7 @@ body {
 .ed-row {
   display: grid;
   grid-template-columns: 64px repeat(2, 1fr);
-  column-gap: 10px;
+  column-gap: 12px;
   height: 70px;
 }
 
@@ -223,7 +225,7 @@ body {
 .certificate .icon {
   grid-area: 4 / 1 / 5 /2;
   font-size: 50px;
-  padding-bottom: 8px;
+  padding-left: 5px;
 }
 
 .certificate .icon-description {
@@ -285,14 +287,6 @@ body {
 
 .projects-grid-2 h4 {
   padding-bottom: 5px;
-}
-
-.tech-stack div {
-  font-size: 13px;
-  /* padding: 13px; */
-  /* text-align: center; */
-  /* display: flex;
-  flex-direction: column; */
 }
 
 .projects-grid .grid-box {
